# zazzle-agent

./: .coverage  .cursorrules  .gitignore  CLAUDE.md  CLEANUP_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_AUTOMATION.md  DEPLOYMENT_IMPROVEMENTS.md  DEPLOYMENT_LOCAL.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.api  Dockerfile.community-agent  Dockerfile.frontend  Dockerfile.interaction  Dockerfile.pipeline  Dockerfile.promoter-agent  LAUNCH_READY_SUMMARY.md  Makefile  OLD_README.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROMOTER_DEPLOYMENT_CHECKLIST.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_DEPLOYMENT_INFO.md  RAILWAY_DEPLOYMENT_TODO.md  README.md  REDIS_INTEGRATION.md  SLIM_DEPLOYMENT_SUMMARY.md  TOMORROW_DEPLOYMENT_CHECKLIST.md  alembic.ini  coverage.txt  coverage.xml  create_test_data.py  custom_webhook.json  deploy.sh  design_generator.py  docker-compose.dev.yml  docker-compose.yml  dump.rdb  env.example  (+41 more)
alembic/: env.py
app/: __init__.py  affiliate_linker.py  api.py  async_image_generator.py  commission_worker.py  config.py  content_generator.py  image_generator.py  interaction_scheduler.py  k8s_job_manager.py  main.py  models.py  pipeline.py  pipeline_scheduler.py  pipeline_status.py  product_designer.py  product_scraper.py  products_config.json  products_config.template.json  reddit_commenter.py  reddit_scraper.py  redis_service.py  subreddit_publisher.py  subreddit_service.py  subreddit_tier_service.py  task_manager.py  task_queue.py  task_runner.py  websocket_manager.py  zazzle_product_designer.py  zazzle_templates.py
archive/: DEPLOYMENT_IMPROVEMENTS.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_TASKS_CHECKLIST.md  SLIM_DEPLOYMENT_SUMMARY.md  july_18_old_readme.md
data/: zazzle_pipeline.db
docs/: ACTION_PLAN.md  COMMISSION_WORKFLOW_TEST.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_SETUP.md  OPENAI_USAGE_PERSISTENCE_PLAN.md  PAYMENT_BEST_PRACTICES.md  RAILWAY_DEPLOYMENT_GUIDE.md  REAL_TIME_PROGRESS_IMPLEMENTATION_PLAN.md  SLOW_TESTS_OPTIMIZATION_PLAN.md  TEST_DATABASE_QUICK_REFERENCE.md  TEST_DATABASE_SETUP.md  daily_progress_updates.md  k8_jobs.md  (+2 more)
(+242 files in other folders)
